force-app/main/default/objects/Custom_Event__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>