force-app/main/default/objects/Custom_Event__c/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &quot;New&quot;) || ISPICKVAL(Status__c, &quot;&quot;) , &quot;&quot;, HYPERLINK( $Label.Community_URL &amp; &quot;?id=&quot; &amp;Id , $Label.Community_URL &amp; &quot;?id=&quot; &amp;Id, &quot;_target&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>