force-app/main/default/objects/Custom_Event__c/fields/Datetime_Selected__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Selected__c</fullName>
    <label>Datetime Selected</label>
    <length>50</length>
    <type>Text</type>
</CustomField>