force-app/main/default/objects/Custom_Event__c/fields/Duration_Add__c.field-meta.xml
<CustomField>
    <fullName>Duration_Add__c</fullName>
    <formula>IF( ISPICKVAL(Minutes_Or_Hours__c, &apos;Minutes&apos;) ,  Duration__c , Duration__c * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Add</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>