force-app/main/default/objects/Custom_Event__c/fields/Event_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_End_DateTime__c</fullName>
    <description>Fill with the event date time in the time zone selected</description>
    <label>Event End DateTime</label>
    <type>DateTime</type>
</CustomField>