force-app/main/default/objects/Custom_Event__c/fields/Event_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_DateTime__c</fullName>
    <description>Fill with the start date time in the time zone selected</description>
    <label>Event Start DateTime</label>
    <type>DateTime</type>
</CustomField>