force-app/main/default/objects/Custom_Event__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be assign by default to you in case that you don&apos;t assign another user.</inlineHelpText>
    <label>Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Events</relationshipName>
    <type>Lookup</type>
</CustomField>