force-app/main/default/objects/Custom_Event__c/fields/Hours_to_Add__c.field-meta.xml
<CustomField>
    <fullName>Hours_to_Add__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours to Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>