force-app/main/default/objects/Custom_Event__c/fields/Minutes_Or_Hours__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Or_Hours__c</fullName>
    <label>Minutes Or Hours</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>