force-app/main/default/objects/Custom_Event__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>