force-app/main/default/objects/Custom_Event__c/fields/Send_Event_Confirmation_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Event_Confirmation_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Event Confirmation Emails</label>
    <type>Checkbox</type>
</CustomField>