force-app/main/default/objects/Custom_Event__c/fields/Time_ZoneStr__c.field-meta.xml
<CustomField>
    <fullName>Time_ZoneStr__c</fullName>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>