force-app/main/default/objects/Custom_Event__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
                <label>Eastern</label>
            </value>
            <value>
                <fullName>CST</fullName>
                <label>Central</label>
            </value>
            <value>
                <fullName>MST</fullName>
                <label>Mountain</label>
            </value>
            <value>
                <fullName>PST</fullName>
                <label>Pacific</label>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>