force-app/main/default/objects/Custom_Event__c/fields/Timezone_Hours__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Hours__c</fullName>
    <label>Timezone Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>