force-app/main/default/objects/Custom_Event__c/fields/Type_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Event__c</fullName>
    <label>Type of Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>