force-app/main/default/objects/Custom_Event__c/validationRules/Seven_days_in_the_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Seven_days_in_the_future</fullName>
    <active>false</active>
    <errorConditionFormula>DATEVALUE(Date__c) - TODAY() &lt; 7</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>The date must be al least 7 days in the future</errorMessage>
</ValidationRule>