force-app/main/default/objects/Custom_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event_Start_DateTime__c</columns>
    <columns>Event_End_DateTime__c</columns>
    <columns>Datetime_Selected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>